endpoint-picker.yaml
apiVersion: v1
kind: Service
metadata:
  name: gemma-2b-it-epp
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc-ext-proc
    port: 9002
    protocol: TCP
    targetPort: 9002
  - name: http-metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    inferencepool: gemma-2b-it-epp
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemma-2b-it-epp
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      inferencepool: gemma-2b-it-epp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        inferencepool: gemma-2b-it-epp
    spec:
      serviceAccountName: gemma-2b-it-epp
      containers:
      - args:
        - --pool-name
        - gemma-2b-it
        - --pool-namespace
        - default
        - --pool-group
        - inference.networking.k8s.io
        - --zap-encoder
        - json
        - --config-file
        - /config/default-plugins.yaml
        - --model-server-metrics-port
        - "8080"  # Ray Serve metrics port.
        - --v
        - "1"
        image: gcr.io/spencerjp-gke-dev/epp:2faa44c1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: epp
        ports:
        - containerPort: 9002
          name: grpc
          protocol: TCP
        - containerPort: 9003
          name: grpc-health
          protocol: TCP
        - containerPort: 9090
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: inference-extension
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: plugins-config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 130
      volumes:
      - configMap:
          defaultMode: 420
          name: gemma-2b-it-epp
        name: plugins-config-volume
