gemma-2b-it.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gemma-2b-it
  namespace: default
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gemma-2b-it
spec:
  parentRefs:
  - name: gemma-2b-it
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: gemma-2b-it
      group: "inference.networking.k8s.io"
      kind: InferencePool
